objects/PSS_Quote_Item__c.object
<CustomObject>
    <description>A single entry in a Premier Success Services Quote</description>
    <fields>
        <fullName>LegacyId__c</fullName>
        <externalId>true</externalId>
        <label>LegacyId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSS_Catalog__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Service Catalog Item associated with this quote record</description>
        <label>PSS Catalog</label>
        <referenceTo>PSS_Catalog__c</referenceTo>
        <relationshipLabel>PSS Quote Items</relationshipLabel>
        <relationshipName>PSS_Opp_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PSS_Opportunity__c</fullName>
        <label>PSS Opportunity</label>
        <referenceTo>PSS_Opportunity__c</referenceTo>
        <relationshipName>PSS_Opp_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PSS_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PSS Catalog Question</label>
        <referenceTo>PSS_Catalog_Question__c</referenceTo>
        <relationshipLabel>PSS Quote Items</relationshipLabel>
        <relationshipName>PSS_Quote_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>How many of the catalog item does the customer need (the formula for determining corresponding number of tokens is separate from this)</description>
        <label>Quantity</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>formula__c</fullName>
        <label>Custom Formula</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isRecommended__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the value of this quote item will be 30% of the total token count of the estimate</description>
        <label>isRecommended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>unitCost__c</fullName>
        <description>The token cost of 1 unit of this service item</description>
        <label>unitCost</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>PSS Quote Item</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>PSS Opp Line Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PSS Quote Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>